--- a/index.html
+++ b/index.html
@@ -10,43 +10,48 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background-color: #faf8ef;
             user-select: none;
+            overflow: hidden;
         }
 
         .game-container {
             background-color: #bbada0;
-            padding: 15px;
-            border-radius: 10px;
+            padding: 2vw;
+            border-radius: 1vw;
             text-align: center;
+            width: 90vw;
+            max-width: 500px;
+            box-sizing: border-box;
         }
 
         .score-container {
-            margin-bottom: 15px;
-            font-size: 24px;
+            margin-bottom: 2vw;
+            font-size: clamp(16px, 4vw, 24px);
             font-weight: bold;
             color: #776e65;
         }
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(4, 100px);
-            grid-gap: 10px;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 2vw;
             background-color: #bbada0;
+            width: 100%;
+            aspect-ratio: 1 / 1; /* Maintains square shape */
         }
 
         .tile {
-            width: 100px;
-            height: 100px;
             background-color: #cdc1b4;
-            border-radius: 5px;
+            border-radius: 1vw;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 40px;
+            font-size: clamp(20px, 6vw, 40px);
             transition: all 0.1s ease-in-out;
+            aspect-ratio: 1 / 1;
         }
 
         .tile:not(:empty) {
@@ -57,6 +62,33 @@
             width: 80%;
             height: 80%;
             object-fit: contain;
+        }
+
+        /* Mobile-specific adjustments */
+        @media (max-width: 600px) {
+            .game-container {
+                padding: 3vw;
+                width: 95vw;
+            }
+
+            .grid {
+                grid-gap: 1.5vw;
+            }
+
+            .tile {
+                border-radius: 0.5vw;
+            }
+        }
+
+        /* Very small screens */
+        @media (max-width: 400px) {
+            .game-container {
+                padding: 2vw;
+            }
+
+            .grid {
+                grid-gap: 1vw;
+            }
         }
     </style>
 </head>
