--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             grid-gap: 2vw;
             background-color: #bbada0;
             width: 100%;
-            aspect-ratio: 1 / 1; /* Maintains square shape */
+            aspect-ratio: 1 / 1;
         }
 
         .tile {
@@ -49,22 +49,46 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: clamp(20px, 6vw, 40px);
             transition: all 0.1s ease-in-out;
             aspect-ratio: 1 / 1;
+            position: relative; /* For positioning the number overlay */
+            overflow: hidden;
         }
 
         .tile:not(:empty) {
             background-color: #eee4da;
         }
 
-        .tile img {
-            width: 80%;
-            height: 80%;
-            object-fit: contain;
+        .tile-image-container {
+            width: 90%; /* Slightly smaller to create a white border effect */
+            height: 90%;
+            background-color: white; /* White background for the image */
+            border: 2px solid black; /* Black border around the image */
+            border-radius: 0.5vw;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* Mobile-specific adjustments */
+        .tile img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Fills the container while maintaining aspect ratio */
+        }
+
+        .tile-number {
+            position: absolute;
+            bottom: 5%;
+            right: 5%;
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+            color: white;
+            font-size: clamp(12px, 3vw, 20px);
+            font-weight: bold;
+            padding: 0.2vw 0.5vw;
+            border-radius: 0.3vw;
+        }
+
         @media (max-width: 600px) {
             .game-container {
                 padding: 3vw;
@@ -78,9 +102,18 @@
             .tile {
                 border-radius: 0.5vw;
             }
+
+            .tile-image-container {
+                border-width: 1px;
+                border-radius: 0.3vw;
+            }
+
+            .tile-number {
+                padding: 0.1vw 0.3vw;
+                border-radius: 0.2vw;
+            }
         }
 
-        /* Very small screens */
         @media (max-width: 400px) {
             .game-container {
                 padding: 2vw;
@@ -144,9 +177,23 @@
                         const value = this.grid[i][j];
                         tile.innerHTML = '';
                         if (value) {
+                            // Create image container
+                            const imageContainer = document.createElement('div');
+                            imageContainer.className = 'tile-image-container';
+
+                            // Add image
                             const img = document.createElement('img');
                             img.src = this.tileImages[value];
-                            tile.appendChild(img);
+                            imageContainer.appendChild(img);
+
+                            // Add number overlay
+                            const numberOverlay = document.createElement('div');
+                            numberOverlay.className = 'tile-number';
+                            numberOverlay.textContent = value;
+
+                            // Append to tile
+                            tile.appendChild(imageContainer);
+                            tile.appendChild(numberOverlay);
                         }
                     }
                 }
