--- a/index.html
+++ b/index.html
@@ -45,48 +45,25 @@
 
         .tile {
             background-color: #cdc1b4;
-            border-radius: 1vw;
+            border-radius: 10%; /* Increased for more noticeable rounding */
             display: flex;
             justify-content: center;
             align-items: center;
             transition: all 0.1s ease-in-out;
             aspect-ratio: 1 / 1;
-            position: relative; /* For positioning the number overlay */
-            overflow: hidden;
+            overflow: hidden; /* Ensures image corners match tile corners */
+            position: relative; /* For better control over child elements */
         }
 
         .tile:not(:empty) {
-            background-color: #eee4da;
-        }
-
-        .tile-image-container {
-            width: 90%; /* Slightly smaller to create a white border effect */
-            height: 90%;
-            background-color: white; /* White background for the image */
-            border: 2px solid black; /* Black border around the image */
-            border-radius: 0.5vw;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-color: transparent; /* Remove background when tile has an image */
         }
 
         .tile img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Fills the container while maintaining aspect ratio */
-        }
-
-        .tile-number {
-            position: absolute;
-            bottom: 5%;
-            right: 5%;
-            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
-            color: white;
-            font-size: clamp(12px, 3vw, 20px);
-            font-weight: bold;
-            padding: 0.2vw 0.5vw;
-            border-radius: 0.3vw;
+            object-fit: cover;
+            border-radius: 10%; /* Match the tile's border-radius */
         }
 
         @media (max-width: 600px) {
@@ -100,17 +77,11 @@
             }
 
             .tile {
-                border-radius: 0.5vw;
+                border-radius: 8%;
             }
 
-            .tile-image-container {
-                border-width: 1px;
-                border-radius: 0.3vw;
-            }
-
-            .tile-number {
-                padding: 0.1vw 0.3vw;
-                border-radius: 0.2vw;
+            .tile img {
+                border-radius: 8%;
             }
         }
 
@@ -121,6 +92,14 @@
 
             .grid {
                 grid-gap: 1vw;
+            }
+
+            .tile {
+                border-radius: 6%;
+            }
+
+            .tile img {
+                border-radius: 6%;
             }
         }
     </style>
@@ -177,23 +156,9 @@
                         const value = this.grid[i][j];
                         tile.innerHTML = '';
                         if (value) {
-                            // Create image container
-                            const imageContainer = document.createElement('div');
-                            imageContainer.className = 'tile-image-container';
-
-                            // Add image
                             const img = document.createElement('img');
                             img.src = this.tileImages[value];
-                            imageContainer.appendChild(img);
-
-                            // Add number overlay
-                            const numberOverlay = document.createElement('div');
-                            numberOverlay.className = 'tile-number';
-                            numberOverlay.textContent = value;
-
-                            // Append to tile
-                            tile.appendChild(imageContainer);
-                            tile.appendChild(numberOverlay);
+                            tile.appendChild(img);
                         }
                     }
                 }
