--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       .game-over-message {
         font-size: clamp(24px, 8vw, 40px);
         font-weight: bold;
-        color: #776e65;
+        color: #000000;
         margin-bottom: 20px;
         text-shadow: 2px 2px 0px #f9f6f2;
         transform: rotate(-5deg);
