--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       .title {
         font-size: clamp(24px, 7vw, 32px);
-        font-weight: bold;
+        /* font-weight: ; */
         color: #ffffff;
         letter-spacing: 1px;
       }
@@ -58,7 +58,7 @@
         padding: 5px 15px;
         border-radius: 5px;
         font-size: clamp(16px, 5vw, 20px);
-        font-weight: bold;
+        /* font-weight: bold; */
         text-shadow: 1px 1px 0px #000;
         letter-spacing: 1px;
       }
@@ -150,7 +150,7 @@
         border-radius: 5px;
         padding: 8px 15px;
         font-size: clamp(14px, 4vw, 18px);
-        font-weight: bold;
+        /* font-weight: bold; */
         cursor: pointer;
         margin-top: 10px;
         font-family: "Impact", sans-serif;
@@ -230,7 +230,7 @@
       /* New direction indicator style */
       .direction-indicator {
         position: absolute;
-        top: 50%;
+        top: 5%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 80px;
@@ -411,7 +411,7 @@
 
         addFloatingMemes() {
           const memes = ["😂", "🤣", "😎", "🔥", "💯", "👌", "🚀"];
-          for (let i = 0; i < 5; i++) {
+          for (let i = 0; i < 50; i++) {
             const meme = document.createElement("div");
             meme.className = "floating-meme";
             meme.textContent = memes[Math.floor(Math.random() * memes.length)];
